--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
                     <nav class="navbar navbar-expand-lg sticky-top">
                         <div class="container">
-                            <a class="navbar-brand d-lg-none d-sm-none d-block" href="#">
+                            <a class="navbar-brand d-lg-none d-sm-none d-block" href="index.html">
                                 <img src="assets/img/logo-consulting.png" alt="logo" width="220">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -73,10 +73,10 @@
                                 <div class="offcanvas-body">
                                     <ul class="navbar-nav justify-content-center">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">Home</a>
+                                            <a class="nav-link" href="index.html">Home</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#">About Us</a>
+                                            <a class="nav-link" href="about.html">About Us</a>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="dropdownId1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -106,7 +106,7 @@
                                         </li>
                                     </ul>
 
-                                    <a class="navbar-brand d-lg-block d-sm-block d-none" href="#">
+                                    <a class="navbar-brand d-lg-block d-sm-block d-none" href="index.html">
                                         <img src="assets/img/logo-consulting.png" alt="logo" width="220">
                                     </a>
 
