--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="services-area pt-100 pb-50 bg-light">
                 <div class="container">
                     <div class="row justify-content-center align-items-start">
-                        <div class="col-lg-3 col-sm-4 col-6">
+                        <div class="col-lg-3 col-sm-4 col-12">
                             <div class="section-title text-start">
                                 <span class="sub-title consulting-color">OUR PRODUCTS</span>
                                 <h2>Material Stones</h2>
@@ -544,7 +544,7 @@
                                     <div class="single-works-box">
                                         <div class="works-image">
                                             <img src="assets/img/gallery/slate-stone-001.jpg" alt="works-image" class="img-responsive w-100">
-                                            <a href="single-portfolio-2.html" class="link-btn d-block"></a>
+                                            <a href="#" class="link-btn d-block"></a>
                                             <div class="works-overlay">
                                                 <h3>Slate Stone</h3>
                                             </div>
