--- a/product.html
+++ b/product.html
@@ -153,28 +153,166 @@
         <!-- Header Section End -->
 
 
-        <!-- Page Title Start -->
-            <div class="breadcrumb-section position-relative">
-                <div class="overlay position-absolute p-5">
-                    <div class="container">
-                        <div class="d-lg-flex d-sm-flex d-block justify-content-between align-items-center">
-                            <div class="add-contnet">
-                                <h4>About Us</h4>
-                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sequi?</p>
+        <!-- Slider Section Start -->
+            <section class="slider-section">
+                <div class="slider-wrap">
+                    <div class="slide slide1">
+                      <div class="content">
+                        <h2>What is Lorem Ipsum?</h2>
+                      </div>
+                    </div>
+                    <div class="slide slide2">
+                      <div class="content">
+                        <h2>What is Lorem Ipsum?</h2>
+                      </div>
+                    </div>
+                    <div class="slide slide3">
+                      <div class="content">
+                        <h2>What is Lorem Ipsum?</h2>
+                      </div>
+                    </div>
+                    <div class="slide slide4">
+                      <div class="content">
+                        <h2>What is Lorem Ipsum?</h2>
+                      </div>
+                    </div>
+                    <div class="slide slide5">
+                      <div class="content">
+                        <h2>What is Lorem Ipsum?</h2>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+        <!-- Slider Section End -->
+
+
+        <!-- Products Section Start -->
+        <div class="services-area pt-100 pb-50 bg-light">
+            <div class="container">
+                <div class="row justify-content-center align-items-start">
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-12">
+                            <div class="section-title text-start mbb-0">
+                                <span class="sub-title consulting-color">OUR PRODUCTS</span>
+                                <h2>Material Stones</h2>
+                                <p align="justify" class="m-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error dolores recusandae incidunt et porro dolor officiis neque molestias facilis magni.</p>
                             </div>
-                            <div class="breadsrumb-data">
-                                <nav aria-label="breadcrumb">
-                                    <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">About Us</li>
-                                    </ol>
-                                </nav>
+                        </div>
+                    </div>
+
+                    <div class="row g-3 justify-content-center">
+                        <div class="col-lg-3 col-sm-4 col-12">
+                            <div class="card p-2 rounded-4  border-light">
+                                <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="First slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Second slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Third slide" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="data-content text-center pt-3 pb-3">
+                                    <h5>Nero Marquina Marble</h5>
+                                    <p class="ellips-1">playing in black ground</p>
+                                    <a name="" id="" class="btn btn-primary rounded-0" href="#" role="button">View More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-4 col-12">
+                            <div class="card p-2 rounded-4  border-light">
+                                <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="First slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Second slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Third slide" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="data-content text-center pt-3 pb-3">
+                                    <h5>Nero Marquina Marble</h5>
+                                    <p class="ellips-1">playing in black ground</p>
+                                    <a name="" id="" class="btn btn-primary rounded-0" href="#" role="button">View More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-4 col-12">
+                            <div class="card p-2 rounded-4  border-light">
+                                <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="First slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Second slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Third slide" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="data-content text-center pt-3 pb-3">
+                                    <h5>Nero Marquina Marble</h5>
+                                    <p class="ellips-1">playing in black ground</p>
+                                    <a name="" id="" class="btn btn-primary rounded-0" href="#" role="button">View More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-4 col-12">
+                            <div class="card p-2 rounded-4  border-light">
+                                <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="First slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Second slide" />
+                                        </div>
+                                        <div class="carousel-item rounded-4">
+                                            <img src="assets/img/material/marble.jpg" class="w-100 d-block rounded-4 border" alt="Third slide" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="data-content text-center pt-3 pb-3">
+                                    <h5>Nero Marquina Marble</h5>
+                                    <p class="ellips-1">playing in black ground</p>
+                                    <a name="" id="" class="btn btn-primary rounded-0" href="#" role="button">View More</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        <!-- Page Title End -->
+        </div>
+        <!-- Product Section End -->
+
+
+        <!-- Advertisement Section Start -->
+         <div class="download-section position-relative">
+            <div class="overlay position-absolute p-5">
+                <div class="container">
+                    <div class="d-lg-flex d-sm-flex d-block justify-content-between align-items-center">
+                        <div class="add-contnet">
+                            <h4>Marble Stones Catalogue</h4>
+                            <p>Download the catalogue and check our group at a general glance</p>
+                        </div>
+                        <div class="add-btn">
+                            <a name="" id="" class="btn btn-primary rounded-0" href="#" role="button">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>
+        <!-- Advertisement Section End -->
 
         <!-- Start Footer Area -->
             <footer class="footer-area consulting-footer">
